@@ -385,6 +385,11 @@ PHP 8.4 UPGRADE NOTES
   . DOMDocument::registerNodeClass() now has a tentative return type of true.
     Previously, the return type was bool but only true could be returned in practice.
 
+- GD:
+  . imagejpeg/imagewebp/imagepng/imageavif throws an exception if an invalid
+    quality parameter value is passed. In addition, imageavif will throw an exception
+    if an invalid speed parameter value is passed.
+
 - Gettext:
   . bind_textdomain_codeset, textdomain and d(*)gettext functions now throw an exception
     if the domain argument is empty.
