@@ -12,10 +12,20 @@ gd
 <?php
     $cwd = __DIR__;
 
-    echo "PNG compression test: ";
 
         $im = imagecreatetruecolor(20,20);
         imagefilledrectangle($im, 5,5, 10,10, 0xffffff);
+	try {
+		imagepng($im, $cwd . '/test_pngcomp.png', -2);
+	} catch (\ValueError $e) {
+		echo $e->getMessage() . PHP_EOL;
+	}
+	try {
+		imagepng($im, $cwd . '/test_pngcomp.png', 10);
+	} catch (\ValueError $e) {
+		echo $e->getMessage() . PHP_EOL;
+	}
+    	echo "PNG compression test: ";
         imagepng($im, $cwd . '/test_pngcomp.png', 9);
 
         $im2 = imagecreatefrompng($cwd . '/test_pngcomp.png');
@@ -27,4 +37,6 @@ gd
     @unlink($cwd . "/test_pngcomp.png");
 ?>
 --EXPECT--
+imagepng(): Argument #3 ($quality) must be between -1 and 9
+imagepng(): Argument #3 ($quality) must be between -1 and 9
 PNG compression test: ok
